--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -70,3 +70,42 @@ nav {
     background-color: #808080;
     border-radius: 50%;
 }
+footer {
+    height: 10vh;
+    width: 100vw;
+    background-color: #282828;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    display: flex;
+}
+.left-side {
+    display: flex;
+    align-items: center;
+    margin-left: 10px;
+}
+.playing-song {
+    width: 20px;
+    margin-right: 5px;
+}
+.song-description p {
+    font-size: 0.5em;
+    color: white;
+    font-weight: bold;
+}
+.song-description div {
+    font-size: 0.4em;
+    color: rgba(255, 255, 255, 0.5);
+}
+.add-playlist {
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    flex-basis: 0.4em;
+    flex-wrap: wrap;
+    font-size: 0.55em;
+    color: rgba(255, 255, 255, 0.5);
+}
+.add-playlist i {
+    margin-bottom: 2px;
+}
