--- a/asset/css/xs-to-s.css
+++ b/asset/css/xs-to-s.css
@@ -1,10 +1,10 @@
 @media screen and (min-width: 321px) and (max-width: 768px){
-    nav {
-        width: 100px;
+    aside {
+        width: 110px;
         align-items: flex-start;
     }
     main {
-        width: calc(100% - 100px);
-        margin-left: 100px;
+        width: calc(100% - 110px);
+        margin-left: 110px;
     }
 }
