--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -46,6 +46,7 @@ aside {
     flex-wrap: wrap;
     justify-content: center;
 }
+/* Parte Superiore */
 #logo-spotify-small{
     width: 15px;
     color: white;
@@ -67,26 +68,48 @@ ul li {
 .menu-text {
     text-decoration: none;
     color: #808080;
-    font-size: 0.5em;
+    font-size: 0.6em;
     padding-left: 5px;
 }
 .menu-text, #logo-spotify-regular, .center-menu  {
     display: none;
 }
+/* Parte Centrale */
+.center-menu {
+    margin-top: -300px;
+}
+.aside-playlist-title {
+    font-size: 0.6em;
+    text-transform: uppercase;
+}
+.create-playlist {
+    display: flex;
+    align-items: center;
+    padding: 10px 0;
+}
+.playlist-name {
+    color: #808080;
+    font-size: 0.6em;
+    padding: 5px 5px;
+}
 .fa-plus {
+    margin-left: 2px;
     padding: 3px ;
     color: black;
     background-color: #A3A3A3;
     font-size: 0.8em;
 }
+/* Parte Inferiore */
 .download {
     width: 10px;
+    position: relative;
 }
 .profile {
     background-color: #808080;
     border-radius: 50%;
     padding: 2px;
 }
+/* Fine menu di sinistra */
 /* Barra di Riproduzione */
 footer {
     height: 8vh;
@@ -254,11 +277,10 @@ li#in-evidenza::after {
 .playlist-section {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
 }
 .playlist {
     text-align: center;
-    margin: 10px 0;
+    margin: 10px 5px;
     width: calc((100% / 2) - 10px);
 }
 .playlist img {
