--- a/asset/css/wider.css
+++ b/asset/css/wider.css
@@ -21,18 +21,13 @@
         width: 90px;
         margin-left: 7px;
     }
-    #home-text {
+    .active {
         color: white;
-    }
-    .nav-playlist-title {
-        color: white;
-        font-size: 0.7em;
     }
     .menu-logos ul li {
         width: 15px;
         margin-bottom: 10px;
     }
-    
     .home-aside::after {
         content: "";
         position: absolute;
@@ -43,8 +38,20 @@
         width: 2px;
         background-color: rgb(173,255,47);
     }
+    .center-menu {
+        display: flex;
+    }
     .aside-playlist {
         color: white;
+    }
+    .download::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        bottom: 0px;
+        height: 1px;
+        width: 90px;
+        background-color: rgba(255, 255, 255, 0.5);
     }
     .song-description p{
         font-size: 0.8em;
