--- a/asset/css/s-to-m.css
+++ b/asset/css/s-to-m.css
@@ -2,4 +2,35 @@
     .playlist {
         width: calc((100% / 4) - 10px);
     }
+    .menu-logos ul li {
+        width: 20px;
+    }
+    .home-aside::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 72px;
+        transform: translateY(-50%);
+        height: 25px;
+        width: 2px;
+        background-color: rgb(173,255,47);
+    }
+    .download::after {
+        width: 120px; 
+    }
+    .song-description p{
+        font-size: 1em;
+    }
+    .song-description div {
+        font-size: 0.7em;
+    }
+    .playing-song {
+        width: 40px;
+    }
+    .add-playlist i{
+        font-size: 1.4em;
+    }
+    .profile {
+        padding: 3px;
+    }
 }
