--- a/asset/css/wider.css
+++ b/asset/css/wider.css
@@ -24,46 +24,14 @@
     .active {
         color: white;
     }
-    .menu-logos ul li {
-        width: 15px;
-        margin-bottom: 10px;
-    }
-    .home-aside::after {
-        content: "";
-        position: absolute;
-        left: 0px;
-        top: 56px;
-        transform: translateY(-50%);
-        height: 20px;
-        width: 2px;
-        background-color: rgb(173,255,47);
-    }
     .center-menu {
         display: flex;
     }
     .aside-playlist {
         color: white;
     }
-    .download::after {
-        content: "";
-        position: absolute;
-        left: 0px;
-        bottom: 0px;
-        height: 1px;
-        width: 90px;
-        background-color: rgba(255, 255, 255, 0.5);
-    }
-    .song-description p{
-        font-size: 0.8em;
-    }
-    .song-description div {
-        font-size: 0.5em;
-    }
-    .playing-song {
-        width: 30px;
-    }
-    .add-playlist i{
-        font-size: 1.4em;
+    li:hover{
+        color: white;
     }
 }
 @media screen and (min-height: 0px) and (max-height: 300px) {
@@ -71,4 +39,15 @@
         display:none;
     }
     
+}
+@media screen and (min-width: 769px) {
+    .download::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        bottom: -5px;
+        height: 1px;
+        width: 120px;
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 }
