--- a/asset/css/xs-to-s.css
+++ b/asset/css/xs-to-s.css
@@ -7,5 +7,40 @@
         width: calc(100% - 110px);
         margin-left: 110px;
     }
-
+    .menu-logos ul li {
+        width: 15px;
+        margin-bottom: 10px;
+    }
+    .home-aside::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        top: 70px;
+        transform: translateY(-50%);
+        height: 20px;
+        width: 2px;
+        background-color: rgb(173,255,47);
+    }
+    .download::after {
+        content: "";
+        position: absolute;
+        left: 0px;
+        bottom: -5px;
+        height: 1px;
+        width: 90px;
+        background-color: rgba(255, 255, 255, 0.5);
+    }
+    
+    .song-description p{
+        font-size: 0.8em;
+    }
+    .song-description div {
+        font-size: 0.5em;
+    }
+    .playing-song {
+        width: 30px;
+    }
+    .add-playlist i{
+        font-size: 1.4em;
+    }
 }
