--- a/asset/css/s-to-m.css
+++ b/asset/css/s-to-m.css
@@ -33,4 +33,12 @@
     .profile {
         padding: 3px;
     }
+    .right-side {
+        font-size: 0.8em;
+    }
+    .mid-buttons {
+        font-size: 0.6em;
+    }
 }
+
+
