--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -22,6 +22,7 @@ header {
     border: 1px solid white;
     color: white;
     padding: 8px 25px;
+    margin-right: 20px;
     border-radius: 50px;
     text-transform: uppercase;
     font-size: 0.5em;
@@ -39,13 +40,12 @@ aside {
     height: 92vh;
     width: 9vw;
     z-index: 1;
-    overflow-y: hidden;
+}
+aside::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
 }
 .top-menu, .bottom-menu {
-    display: flex;
     padding-top: 20px;
-    flex-wrap: wrap;
-    justify-content: center;
 }
 /* Parte Superiore */
 #logo-spotify-small{
@@ -53,7 +53,6 @@ aside {
     color: white;
 }
 .menu-logos {
-    width: 15px;
     color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
     text-align: center;
@@ -77,8 +76,10 @@ ul li {
     display: none;
 }
 /* Parte Centrale */
-.center-menu {
-    margin-top: -250px;
+.center-menu{
+    overflow-y: auto;
+    margin-top: 50px;
+    height: calc(100% - 80px);
 }
 .aside-playlist-title {
     font-size: 0.6em;
@@ -102,11 +103,16 @@ ul li {
     font-size: 0.8em;
 }
 /* Parte Inferiore */
+.bottom-menu{
+    height: 80px;
+    margin-bottom: 20px;
+}
 .download {
     width: 10px;
     position: relative;
 }
 .profile {
+    padding-top: 50px;
     background-color: #808080;
     border-radius: 50%;
     padding: 2px;
@@ -122,12 +128,14 @@ footer {
     left: 0;
     display: flex;
     justify-content: space-between;
+    z-index: 2;
 }
 /* Riproduzione SX */
 .left-side {
+    width: 30%;    
     display: flex;
     align-items: center;
-    margin-left: 10px;
+    margin-left: 2%;
 }
 .playing-song {
     width: 20px;
@@ -156,7 +164,7 @@ footer {
 }
 /* Riproduzione MID */
 .mid-side {
-    width: 40%;
+    width: 30%;
     color: white;
     display: flex;
     flex-direction: column;
@@ -164,22 +172,17 @@ footer {
     justify-content: center;
 }
 .mid-buttons {
+    width: 40%;
     display: flex;
     align-items: center;
     font-size: 0.5em;
-    margin: 7px 15px;
-    margin-left: 20px;
-    
+    margin: 1vh auto;
+    margin-right: 40px;
 }
 .mid-buttons i {
-    min-width: 20px;
-}
-.play-button {
-    border: 2px solid white;
-    padding: 4px;
-    margin-right: 10px;
-    border-radius: 50px;
-    text-align: center;
+    font-size: 1.3em;
+    padding: 0 5%;
+    margin: 0 auto;
 }
 .song-progress {
     font-size: 0.4em;
@@ -221,11 +224,13 @@ footer {
     width: 30%;
 }
 .right-side {
+    width: 30%;
     color: white;
     display: flex;
+    justify-content: flex-end;
     font-size: 0.5em;
     align-items: center;
-    margin-right: 10px;
+    margin-right: 2%;
 }
 /* Riproduzione DX */
 .right-side i {
@@ -269,7 +274,7 @@ li#in-evidenza::after {
     bottom: 0;
     transform: translateX(-50%);
     height: 1px;
-    width: 20px;
+    width: 50%;
     background-color: rgb(173,255,47);
 }
 .section-title {
@@ -288,6 +293,28 @@ li#in-evidenza::after {
 .playlist img {
     max-width: 100%;
 }
+.playlist-img {
+    position: relative;
+    display: flex;
+}
+.play-overlay{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba( 0, 0, 0, 0.5);
+    opacity: 0;
+}
+.play-overlay:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+.fa-play-circle {
+    color: white;
+    font-size: 3em;
+}
 .playlist h3 {
     font-size: 0.8em;
     color: white;
@@ -298,6 +325,17 @@ li#in-evidenza::after {
     font-size: 0.7em;
     margin: 10px 0;
 }
+.playlist2{
+    display: flex;
+    width: calc((100% / 2) - 10px);
+}
 .last-section {
     border-radius: 50%;
+}
+.p-over-last {
+    border-radius: 50%;
+}
+li p:hover, li a:hover, li:hover{
+    color: white;
+    cursor: pointer;
 }
