--- a/asset/css/wider.css
+++ b/asset/css/wider.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 321px){
+@media screen and (min-width: 320px){
     aside {
         width: 150px;
         align-items: flex-start;
@@ -30,9 +30,15 @@
     .aside-playlist {
         color: white;
     }
-    li:hover{
-        color: white;
+    .mid-buttons {
+        width: 40%;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        font-size: 0.5em;
+        margin: 1vh auto;
     }
+    
 }
 @media screen and (min-height: 0px) and (max-height: 300px) {
     header {
