--- a/asset/css/m-to-l.css
+++ b/asset/css/m-to-l.css
@@ -17,16 +17,17 @@
         background-color: rgb(173,255,47);
     }
     .song-description p{
-        font-size: 1em;
+        font-size: 1.1em;
     }
     .song-description div {
-        font-size: 0.7em;
+        font-size: 0.8em;
     }
     .playing-song {
-        width: 40px;
+        width: 50px;
     }
     .add-playlist i{
-        font-size: 1.4em;
+        margin-left: 30px;
+        font-size: 1.8em;
     }
     .profile {
         padding: 4px;
@@ -45,5 +46,8 @@
     }
     .mid-side {
         width: 40%;
+    }
+    .download::after {
+        width: 130px;
     }
 }
