--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -48,6 +48,9 @@ aside::-webkit-scrollbar {
     padding-top: 20px;
 }
 /* Parte Superiore */
+.nav-top {
+    height: calc(100% - 80px);
+}
 #logo-spotify-small{
     width: 15px;
     color: white;
@@ -56,6 +59,7 @@ aside::-webkit-scrollbar {
     color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
     text-align: center;
+    width: 100%;
 }
 ul li {
     list-style-type: none;
@@ -105,10 +109,13 @@ ul li {
 /* Parte Inferiore */
 .bottom-menu{
     height: 80px;
-    margin-bottom: 20px;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
 }
 .download {
-    width: 10px;
     position: relative;
 }
 .profile {
@@ -121,6 +128,7 @@ ul li {
 /* Barra di Riproduzione */
 footer {
     height: 8vh;
+    min-height: 70px;
     width: 100vw;
     background-color: #282828;
     position: fixed;
@@ -161,6 +169,7 @@ footer {
 }
 .add-playlist i {
     margin-bottom: 2px;
+    padding: 3px 0;
 }
 /* Riproduzione MID */
 .mid-side {
@@ -204,7 +213,6 @@ footer {
 .progress {
     padding: 0 35px;
     margin: 0 5px;
-    
 }
 .volume {
     width: 60px;
@@ -335,7 +343,13 @@ li#in-evidenza::after {
 .p-over-last {
     border-radius: 50%;
 }
-li p:hover, li a:hover, li:hover{
+li p:hover, li a:hover, li:hover, .active:hover{
     color: white;
     cursor: pointer;
+}
+.add-playlist i:hover {
+    color: white;
+}
+#upgrade:hover{
+    font-size: 0.6em;
 }
