--- a/asset/css/wider.css
+++ b/asset/css/wider.css
@@ -39,21 +39,18 @@
         margin: 1vh auto;
     }
     
+    .download::after {
+        content: "";
+        position: absolute;
+        left: 0;
+        bottom: -5px;
+        height: 1px;
+        width: 90px;
+        background-color: rgba(255, 255, 255, 0.5);
+    }
 }
 @media screen and (min-height: 0px) and (max-height: 300px) {
     header {
         display:none;
-    }
-    
-}
-@media screen and (min-width: 769px) {
-    .download::after {
-        content: "";
-        position: absolute;
-        left: 0px;
-        bottom: -5px;
-        height: 1px;
-        width: 120px;
-        background-color: rgba(255, 255, 255, 0.5);
     }
 }
