--- a/asset/css/s-to-m.css
+++ b/asset/css/s-to-m.css
@@ -37,7 +37,11 @@
         font-size: 0.8em;
     }
     .mid-buttons {
-        font-size: 0.6em;
+        font-size: 0.9em;
+    }
+
+    .song-progress span {
+        font-size: 1.5em;
     }
 }
 
