--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -128,22 +128,23 @@ ul li {
 /* Barra di Riproduzione */
 footer {
     height: 8vh;
-    min-height: 70px;
+    min-height: 50px;
     width: 100vw;
     background-color: #282828;
     position: fixed;
     bottom: 0;
     left: 0;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     z-index: 2;
+}
+.left-side, .mid-side, .right-side {
+    width: calc(100% / 3);
 }
 /* Riproduzione SX */
 .left-side {
-    width: 30%;    
     display: flex;
     align-items: center;
-    margin-left: 2%;
 }
 .playing-song {
     width: 20px;
@@ -173,7 +174,7 @@ footer {
 }
 /* Riproduzione MID */
 .mid-side {
-    width: 30%;
+    margin: 0 auto;
     color: white;
     display: flex;
     flex-direction: column;
@@ -181,29 +182,34 @@ footer {
     justify-content: center;
 }
 .mid-buttons {
-    width: 40%;
+    width: 70%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
-    font-size: 0.5em;
-    margin: 1vh auto;
-    margin-right: 40px;
+    justify-content: center;
+    font-size: 0.6em;
+    margin-bottom: 10px;
+    padding-top: 5px;
 }
 .mid-buttons i {
     font-size: 1.3em;
     padding: 0 5%;
     margin: 0 auto;
+    cursor: pointer;
 }
+
 .song-progress {
+    width: 80%;
+    margin: 0 auto;
     font-size: 0.4em;
     font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 70%;
-    margin: 0 auto;
 }
 .bar {
     width: 80%;
+    margin: ;
     height: 2px;
     background-color: rgba(255, 255, 255, 0.5);
     display: inline-block;
@@ -213,6 +219,9 @@ footer {
 .progress {
     padding: 0 35px;
     margin: 0 5px;
+}
+.song-progress span {
+    font-size: 1.3em;
 }
 .volume {
     width: 60px;
@@ -232,17 +241,17 @@ footer {
     width: 30%;
 }
 .right-side {
-    width: 30%;
+    width: calc(100% / 3);
     color: white;
     display: flex;
     justify-content: flex-end;
     font-size: 0.5em;
     align-items: center;
-    margin-right: 2%;
 }
 /* Riproduzione DX */
 .right-side i {
     margin: 0 5%;
+    cursor: pointer;
 }
 /* Sezione centrale */
 main {
