--- a/asset/css/xs-to-s.css
+++ b/asset/css/xs-to-s.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 321px) and (max-width: 768px){
+@media screen and (min-width: 320px) and (max-width: 768px){
     aside {
         width: 110px;
         align-items: flex-start;
@@ -32,5 +32,8 @@
     }
     .add-playlist i{
         font-size: 1.4em;
+    }
+    .mid-buttons {
+        font-size: 0.8em;
     }
 }
