--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -29,6 +29,7 @@ header {
     text-align: center;
     cursor: pointer;
 }
+
 /* Menù di Sinistra */
 aside {
     position: fixed;
@@ -125,6 +126,7 @@ ul li {
     padding: 2px;
 }
 /* Fine menu di sinistra */
+
 /* Barra di Riproduzione */
 footer {
     height: 8vh;
@@ -135,7 +137,7 @@ footer {
     bottom: 0;
     left: 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     z-index: 2;
 }
 .left-side, .mid-side, .right-side {
@@ -174,6 +176,7 @@ footer {
 }
 /* Riproduzione MID */
 .mid-side {
+    width: 50%;
     margin: 0 auto;
     color: white;
     display: flex;
@@ -188,7 +191,6 @@ footer {
     align-items: center;
     justify-content: center;
     font-size: 0.6em;
-    margin-bottom: 10px;
     padding-top: 5px;
 }
 .mid-buttons i {
@@ -197,7 +199,6 @@ footer {
     margin: 0 auto;
     cursor: pointer;
 }
-
 .song-progress {
     width: 80%;
     margin: 0 auto;
@@ -223,6 +224,48 @@ footer {
 .song-progress span {
     font-size: 1.3em;
 }
+input[type="range"] {
+-webkit-appearance: none;
+cursor: pointer;
+margin-top: 5px;
+margin: auto;
+width: 70%;
+height: 3px;
+border-radius: 50px;
+display: inline-block;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+    background: #5A5A5A;
+    height: 4px;
+    border-radius: 50px;
+}
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 12px;
+    width: 12px;
+    border-radius: 50%;
+    background-color: #C1C1C1;
+    transform: translateY(-30%);
+    opacity: 0;
+}
+input[type="range"]::-webkit-slider-thumb:hover{
+    background-color: #C1C1C1;
+    opacity: 1;
+}
+input[type="range"]::-webkit-slider-thumb:active{
+    background-color: lime;
+}    
+
+.song-progression {
+    margin-top: 10px;
+    display: flex;
+    width: 100%;
+    padding: 0 15%;
+}
+.song-progression span {
+    font-size: 0.4em;
+}
+/* Riproduzione DX */
 .volume {
     width: 60px;
 }
@@ -241,18 +284,17 @@ footer {
     width: 30%;
 }
 .right-side {
-    width: calc(100% / 3);
     color: white;
     display: flex;
     justify-content: flex-end;
     font-size: 0.5em;
     align-items: center;
 }
-/* Riproduzione DX */
 .right-side i {
     margin: 0 5%;
     cursor: pointer;
 }
+
 /* Sezione centrale */
 main {
     background-color: #141922;
