--- a/asset/css/m-to-l.css
+++ b/asset/css/m-to-l.css
@@ -40,6 +40,7 @@
     }
     .right-side {
         font-size: 0.8em;
+        padding-left: 23%;
     }
     .mid-buttons {
         width: 80%;
@@ -52,6 +53,10 @@
         width: 130px;
     }
     .song-progression span {
-        font-size: 0.7em;
+        font-size: 0.9em;
     }
+    .volume-bar {
+        width: 150px;
+    }
+    
 }
